--- a/carrito.html
+++ b/carrito.html
@@ -8,7 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>Carrito de Compras</h1>
+    <div class="header-container">
+      <h1>Carrito de Compras</h1>
+      <nav>
+        <ul>
+          
+          <li><a href="index.html"><i class="fas fa-shopping-cart"></i> Home</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
