--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <h1>Rueda Libre - Tienda de Bicicletas</h1>
       <nav>
         <ul>
-
           <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
         </ul>
       </nav>
@@ -33,7 +32,8 @@
               <h4>Bici Urbana Pro</h4>
               <p>Ideal para la ciudad. Ligera y cómoda con cuadro de aluminio y cambios integrados.</p>
               <p class="precio">$300.000</p>
-              <button onclick="agregarAlCarrito('Bici Urbana Pro', 300000)">Agregar al carrito</button>
+              <button onclick="agregarAlCarrito('Bici Urbana Pro', 300000, 'imagenes/bicicleta.png')">Agregar al carrito</button>
+
             </div>
 
           </div>
